# py_nnet_to_onnx

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
examples/: example_nnet2onnx.py  example_onnx2nnet.py
examples/output/: TestNetwork2.nnet  TestNetwork2.onnx
src/nnet/converters/: keras2nnet.py  nnet2onnx.py  onnx2nnet.py
src/nnet/utils/: normalizeNNet.py
